# Autobill

./: LICENSE  coq_term.v  coq_term2.v  coq_term3.v  coq_term4.v  debug  dune-project  dune-workspace  eqns_pack.bill  eqns_spec.bill  fold.bill  fun.bill  funt.bill  grammar.html  grammar.md  news.md  opam-switch  out.mzn  out.smt2  readme.md  syntax_ideas.txt  syntaxe_lcbpv.md  test.bill  test.cbpv  test.mid  test.ml  test.out  test.s  test.smt2  todo.txt  token.bill
lib/: FOLNormalize.ml  ast.ml  ast.ml.bak  ast.mli  ast.mli.bak  calculi.ml  calculi.mli  constructors.ml  constructors.mli  cst.ml  cst.mli  cstPrettyPrinter.ml  cstPrettyPrinter.mli  dune  elaboration.ml  elaboration.mli  firstOrder.ml  global_counter.ml  intern_prelude.ml  intern_prog.ml  internalize.ml.bak  internalize.mli.bak  lexer.mll  parser.bak  parser.mly  prelude.ml  prettyPrinter.ml  prettyPrinter.ml.bak  prettyPrinter.mli  prettyPrinter.mli.bak  printer.ml  printer.mli  program.ml  program.mli  types.ml  types.mli  util.ml  util.mli  vars.ml  vars.mli
lib/Common/: PrimitivePrelude.ml  Primitives.ml  ast.ml  constructors.ml  constructors.mli  prelude.ml  preprocess_ast.ml  prettyPrinter.ml  types.ml  types.mli  util.ml  util.mli  vars.ml  vars.mli
lib/Constraints/: AaraCompress.ml  AaraExport.ml  Constraint_common.ml  Constraint_intf.ml  CoqExport.ml  FOLNormalize.ml  LP_of_FOL.ml  MZN_of_LP.ml  SMT.ml  SMT_of_FOL.ml  SMT_of_LP.ml  firstOrder.ml  polynomials.ml  skolem.ml  skolemize.ml
lib/Cst/: cst.ml  cst.mli  cstPrettyPrinter.ml  cst_intf.ml  lexer.mll  parser.mly
lib/MiniML/: astML.ml  (+7 more)
(+148 files in other folders)
