(library
 (name autobill)
 (public_name autobill))

(subdir
 Cst
 (menhir
  (modules parser)))

(subdir
 Cst
 (ocamllex lexer))

(subdir
 LCBPV
 (menhir
  (modules lcbpv_parser)))

(subdir
 LCBPV
 (ocamllex lcbpv_lexer))

(subdir
 MiniML
 (menhir
  (modules parserML)))

(subdir
 MiniML
 (ocamllex lexerML))

(include_subdirs unqualified)
