(library
 (name autobill)
 (libraries str)
 (public_name autobill))

(subdir
 Cst
 (menhir
  (modules parser)))

(subdir
 Cst
 (ocamllex lexer))

(subdir
 lcbpv
 (menhir
  (modules lcbpv_parser)))

(subdir
 lcbpv
 (ocamllex lcbpv_lexer))

(subdir
 MiniML
 (menhir
  (modules parserML)))

(subdir
 MiniML
 (ocamllex lexerML))

(include_subdirs unqualified)
